fix profile pic alignment

--- a/style.css
+++ b/style.css
@@ -321,7 +321,7 @@ section {
 }
 
 .section__pic-container {
-  position: relative; /* Add this line */
+  display: flex;
   height: 400px;
   width: 400px;
   margin: auto 0;
